--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["aqi", "air-quality", "express"],
+  "keywords": [
+    "aqi",
+    "air-quality",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "axios": "^1.6.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
   }
 }
-
